update layout draft

--- a/index.html
+++ b/index.html
@@ -15,56 +15,58 @@
         <link href="/css/font-loader.min.css" rel="stylesheet">
     </head>
     <body>
-        <div class="container text-center">
-            <div class="row">
-                <div class="col">
-                    <h1>CHIU, SHENG-YU (邱勝宇) | Shiame Akishino</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <p>Welcome to my personal website!</p>
-                </div>
-            </div>
-        </div>
-        <!-- License Footer -->
-        <footer class="bg-light py-4 mt-5">
-            <div class="container">
+        <div class="container-fluid bg-light">
+            <div class="container text-center">
                 <div class="row">
-                    <div class="col-12 text-center">
-                        <div class="card border-0 bg-transparent">
-                            <div class="card-body">
-                                <h5 class="card-title text-muted">License & Privacy</h5>
-                                <div class="d-flex justify-content-center align-items-center flex-wrap">
-                                    <img src="https://licensebuttons.net/l/by-nc-nd/4.0/88x31.png" 
-                                         alt="Creative Commons License" 
-                                         class="me-3 mb-2">
-                                    <div class="text-start">
-                                        <p class="mb-1 fw-bold">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International</p>
-                                        <p class="mb-0 text-muted small">
-                                            This work is licensed under a 
-                                            <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" 
-                                               target="_blank" 
-                                               class="text-decoration-none">
-                                                CC BY-NC-ND 4.0 International License
-                                            </a>
-                                        </p>
+                    <div class="col">
+                        <h1>CHIU, SHENG-YU (邱勝宇) | Shiame Akishino</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p>Welcome to my personal website!</p>
+                    </div>
+                </div>
+            </div>
+            <!-- License Footer -->
+            <footer class="bg-light py-4 mt-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <div class="card border-0 bg-transparent">
+                                <div class="card-body">
+                                    <h5 class="card-title text-muted">License & Privacy</h5>
+                                    <div class="d-flex justify-content-center align-items-center flex-wrap">
+                                        <img src="https://licensebuttons.net/l/by-nc-nd/4.0/88x31.png" 
+                                            alt="Creative Commons License" 
+                                            class="me-3 mb-2">
+                                        <div class="text-start">
+                                            <p class="mb-1 fw-bold">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International</p>
+                                            <p class="mb-0 text-muted small">
+                                                This work is licensed under a 
+                                                <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" 
+                                                target="_blank" 
+                                                class="text-decoration-none">
+                                                    CC BY-NC-ND 4.0 International License
+                                                </a>
+                                            </p>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="mt-3">
-                                    <small class="text-muted">
-                                        <strong>You are free to:</strong> Share — copy and redistribute the material in any medium or format<br>
-                                        <strong>Under the following terms:</strong> Attribution, NonCommercial, NoDerivatives
-                                    </small>
-                                </div>
-                                <!-- Additional Privacy Notice -->
-                                <div class="mt-3 pt-3 border-top">
-                                    <div class="alert alert-warning d-flex align-items-center" role="alert">
-                                        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
-                                            <use xlink:href="#exclamation-triangle-fill"/>
-                                        </svg>
-                                        <div>
-                                            <strong>Privacy Notice:</strong> No personal data from this site can be reused, collected, or processed for any purpose without explicit written consent.
+                                    <div class="mt-3">
+                                        <small class="text-muted">
+                                            <strong>You are free to:</strong> Share — copy and redistribute the material in any medium or format<br>
+                                            <strong>Under the following terms:</strong> Attribution, NonCommercial, NoDerivatives
+                                        </small>
+                                    </div>
+                                    <!-- Additional Privacy Notice -->
+                                    <div class="mt-3 pt-3 border-top">
+                                        <div class="alert alert-warning d-flex align-items-center" role="alert">
+                                            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
+                                                <use xlink:href="#exclamation-triangle-fill"/>
+                                            </svg>
+                                            <div>
+                                                <strong>Privacy Notice:</strong> No personal data from this site can be reused, collected, or processed for any purpose without explicit written consent.
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -72,14 +74,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </footer>
-        <!-- Bootstrap Icons for Warning Symbol -->
-        <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-            <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-            </symbol>
-        </svg>
+            </footer>
+            <!-- Bootstrap Icons for Warning Symbol -->
+            <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </symbol>
+            </svg>
+        </div>
         <script src="/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
