add some sections

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="/css/bootstrap-utilities.min.css" rel="stylesheet">
         <link href="/css/bootstrap-utilities.rtl.min.css" rel="stylesheet">
         <link href="/css/font-loader.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     </head>
     <body>
         <div class="container-fluid bg-light">
@@ -25,6 +26,146 @@
                 <div class="row">
                     <div class="col">
                         <p>Welcome to my personal website!</p>
+                    </div>
+                </div>
+            </div>            
+            <!-- Main Content Sections -->
+            <div class="container mt-5">
+                <!-- 自己紹介 Section -->
+                <div class="row mb-5">
+                    <div class="col-12">
+                        <div class="card shadow-sm">
+                            <div class="card-header bg-primary text-white">
+                                <h2 class="card-title mb-1">自己紹介</h2>
+                                <small class="text-light opacity-75">Self Introduction</small>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">
+                                    こちらに自己紹介の内容を記載します。趣味、興味、性格などについて書くことができます。
+                                </p>
+                                <p class="card-text text-muted">
+                                    Here you can write about yourself, including your hobbies, interests, and personality.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 学/職歴 Section -->
+                <div class="row mb-5">
+                    <div class="col-12">
+                        <div class="card shadow-sm">
+                            <div class="card-header bg-success text-white">
+                                <h2 class="card-title mb-1">学/職歴</h2>
+                                <small class="text-light opacity-75">Educational & Work Experience</small>
+                            </div>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <h5 class="text-success">学歴 <small class="text-muted">Education</small></h5>
+                                        <ul class="list-unstyled">
+                                            <li class="mb-2">
+                                                <strong>2020年 - 2024年</strong><br>
+                                                <span class="text-muted">大学名・学部・学科</span><br>
+                                                <small class="text-muted">University Name, Faculty, Department</small>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <h5 class="text-success">職歴 <small class="text-muted">Work Experience</small></h5>
+                                        <ul class="list-unstyled">
+                                            <li class="mb-2">
+                                                <strong>2024年 - 現在</strong><br>
+                                                <span class="text-muted">会社名・職位</span><br>
+                                                <small class="text-muted">Company Name, Position</small>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 免許と資格 Section -->
+                <div class="row mb-5">
+                    <div class="col-12">
+                        <div class="card shadow-sm">
+                            <div class="card-header bg-info text-white">
+                                <h2 class="card-title mb-1">免許と資格</h2>
+                                <small class="text-light opacity-75">Licenses & Certifications</small>
+                            </div>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6 mb-3">
+                                        <div class="border-start border-info border-3 ps-3">
+                                            <h6 class="text-info mb-1">免許 <small class="text-muted">Licenses</small></h6>
+                                            <ul class="list-unstyled mb-0">
+                                                <li class="mb-1">
+                                                    <i class="bi bi-check-circle-fill text-success me-2"></i>
+                                                    普通自動車第一種運転免許
+                                                    <br><small class="text-muted ms-4">Regular Driver's License</small>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 mb-3">
+                                        <div class="border-start border-info border-3 ps-3">
+                                            <h6 class="text-info mb-1">資格 <small class="text-muted">Certifications</small></h6>
+                                            <ul class="list-unstyled mb-0">
+                                                <li class="mb-1">
+                                                    <i class="bi bi-award-fill text-warning me-2"></i>
+                                                    TOEIC 850点
+                                                    <br><small class="text-muted ms-4">TOEIC Score 850</small>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 経歴・PR Section -->
+                <div class="row mb-5">
+                    <div class="col-12">
+                        <div class="card shadow-sm">
+                            <div class="card-header bg-warning text-dark">
+                                <h2 class="card-title mb-1">経歴・PR</h2>
+                                <small class="opacity-75">Career History & Personal Statement</small>
+                            </div>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-lg-8">
+                                        <h5 class="text-warning mb-3">主な経歴 <small class="text-muted">Key Achievements</small></h5>
+                                        <div class="timeline">
+                                            <div class="mb-4">
+                                                <div class="d-flex">
+                                                    <div class="flex-shrink-0">
+                                                        <div class="bg-warning rounded-circle" style="width: 12px; height: 12px; margin-top: 6px;"></div>
+                                                    </div>
+                                                    <div class="flex-grow-1 ms-3">
+                                                        <h6 class="mb-1">プロジェクト名・成果</h6>
+                                                        <p class="text-muted mb-1">Project name and achievements</p>
+                                                        <small class="text-muted">詳細な説明をここに記載します。</small>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <h5 class="text-warning mb-3">スキル <small class="text-muted">Skills</small></h5>
+                                        <div class="mb-2">
+                                            <span class="badge bg-secondary me-1 mb-1">JavaScript</span>
+                                            <span class="badge bg-secondary me-1 mb-1">Python</span>
+                                            <span class="badge bg-secondary me-1 mb-1">HTML/CSS</span>
+                                        </div>
+                                        <div class="mb-2">
+                                            <span class="badge text-bg-light border me-1 mb-1">Bootstrap</span>
+                                            <span class="badge text-bg-light border me-1 mb-1">React</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
