--- a/index.html
+++ b/index.html
@@ -23,19 +23,14 @@
                         <h1>CHIU, SHENG-YU (邱勝宇) | Shiame Akishino</h1>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <p>Welcome to my personal website!</p>
-                    </div>
-                </div>
             </div>            
-            <!-- Main Content Sections -->
             <div class="container mt-5">
-                <!-- 自己紹介 Section -->
+                <!-- Main Content Sections -->
                 <div class="row mb-5">
                     <div class="col-12">
+                        <!-- 自己紹介 Section -->
                         <div class="card shadow-sm">
-                            <div class="card-header bg-primary text-white">
+                            <div class="card-header bg-secondary text-white">
                                 <h2 class="card-title mb-1">自己紹介</h2>
                                 <small class="text-light opacity-75">Self Introduction</small>
                             </div>
@@ -48,13 +43,9 @@
                                 </p>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <!-- 学/職歴 Section -->
-                <div class="row mb-5">
-                    <div class="col-12">
+                        <!-- 学/職歴 Section -->
                         <div class="card shadow-sm">
-                            <div class="card-header bg-success text-white">
+                            <div class="card-header bg-secondary text-white">
                                 <h2 class="card-title mb-1">学/職歴</h2>
                                 <small class="text-light opacity-75">Educational & Work Experience</small>
                             </div>
@@ -83,13 +74,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <!-- 免許と資格 Section -->
-                <div class="row mb-5">
-                    <div class="col-12">
+                        <!-- 免許と資格 Section -->
                         <div class="card shadow-sm">
-                            <div class="card-header bg-info text-white">
+                            <div class="card-header bg-secondary text-white">
                                 <h2 class="card-title mb-1">免許と資格</h2>
                                 <small class="text-light opacity-75">Licenses & Certifications</small>
                             </div>
@@ -122,13 +109,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <!-- 経歴・PR Section -->
-                <div class="row mb-5">
-                    <div class="col-12">
+                        <!-- 経歴・PR Section -->
                         <div class="card shadow-sm">
-                            <div class="card-header bg-warning text-dark">
+                            <div class="card-header bg-secondary text-white">
                                 <h2 class="card-title mb-1">経歴・PR</h2>
                                 <small class="opacity-75">Career History & Personal Statement</small>
                             </div>
