--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </head>
     <body>
         <div class="container-fluid bg-light">
-            <div class="container text-center">
-                <div class="row">
+            <div class="container text-center pt-5">
+                <div class="row pt-5">
                     <div class="col">
                         <h1>CHIU, SHENG-YU (邱勝宇) | Shiame Akishino</h1>
                     </div>
@@ -35,11 +35,11 @@
                                 <small class="text-light opacity-75">Self Introduction</small>
                             </div>
                             <div class="card-body">
-                                <p class="card-text">
-                                    こちらに自己紹介の内容を記載します。趣味、興味、性格などについて書くことができます。
+                                <p id="japanese-content" class="card-text">
+                                    読み込み中...
                                 </p>
-                                <p class="card-text text-muted">
-                                    Here you can write about yourself, including your hobbies, interests, and personality.
+                                <p id="english-content" class="card-text text-muted">
+                                    Loading...
                                 </p>
                             </div>
                         </div>
@@ -207,5 +207,6 @@
             </svg>
         </div>
         <script src="/js/bootstrap.bundle.min.js"></script>
+        <script src="/js/text-parser.js"></script>
     </body>
 </html>
