--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Akishi's Life</title>
-        <link href="/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/css/bootstrap.rtl.min.css" rel="stylesheet">
-        <link href="/css/bootstrap-grid.min.css" rel="stylesheet">
-        <link href="/css/bootstrap-grid.rtl.min.css" rel="stylesheet">
-        <link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
-        <link href="/css/bootstrap-reboot.rtl.min.css" rel="stylesheet">
-        <link href="/css/bootstrap-utilities.min.css" rel="stylesheet">
-        <link href="/css/bootstrap-utilities.rtl.min.css" rel="stylesheet">
-        <link href="/css/font-loader.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+        <link href="./css/bootstrap.min.css" rel="stylesheet">
+        <link href="./css/bootstrap.rtl.min.css" rel="stylesheet">
+        <link href="./css/bootstrap-grid.min.css" rel="stylesheet">
+        <link href="./css/bootstrap-grid.rtl.min.css" rel="stylesheet">
+        <link href="./css/bootstrap-reboot.min.css" rel="stylesheet">
+        <link href="./css/bootstrap-reboot.rtl.min.css" rel="stylesheet">
+        <link href="./css/bootstrap-utilities.min.css" rel="stylesheet">
+        <link href="./css/bootstrap-utilities.rtl.min.css" rel="stylesheet">
+        <link href="./css/font-loader.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="container-fluid bg-light">
@@ -206,7 +205,7 @@
                 </symbol>
             </svg>
         </div>
-        <script src="/js/bootstrap.bundle.min.js"></script>
-        <script src="/js/text-parser.js"></script>
+        <script src="./js/bootstrap.bundle.min.js"></script>
+        <script src="./js/text-parser.js"></script>
     </body>
 </html>
