update text size

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                                 <small class="text-light opacity-75">Self Introduction</small>
                             </div>
                             <div class="card-body">
-                                <p id="japanese-content" class="card-text">
+                                <p id="japanese-content" class="card-text fs-4">
                                     読み込み中...
                                 </p>
-                                <p id="english-content" class="card-text text-muted">
+                                <p id="english-content" class="card-text text-muted fs-6">
                                     Loading...
                                 </p>
                             </div>
