--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container text-center pt-5">
                 <div class="row pt-5">
                     <div class="col">
-                        <h1>CHIU, SHENG-YU (邱勝宇) | Shiame Akishino</h1>
+                        <h1><canvas id="res-title"></canvas></h1>
                     </div>
                 </div>
             </div>            
@@ -51,22 +51,22 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h5 class="text-success">学歴 <small class="text-muted">Education</small></h5>
-                                        <ul class="list-unstyled">
-                                            <li class="mb-2">
-                                                <strong>2020年 - 2024年</strong><br>
-                                                <span class="text-muted">大学名・学部・学科</span><br>
-                                                <small class="text-muted">University Name, Faculty, Department</small>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-md-6">
                                         <h5 class="text-success">職歴 <small class="text-muted">Work Experience</small></h5>
                                         <ul class="list-unstyled">
                                             <li class="mb-2">
                                                 <strong>2024年 - 現在</strong><br>
                                                 <span class="text-muted">会社名・職位</span><br>
                                                 <small class="text-muted">Company Name, Position</small>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <h5 class="text-success">学歴 <small class="text-muted">Education</small></h5>
+                                        <ul class="list-unstyled">
+                                            <li class="mb-2">
+                                                <strong>2020年 - 2024年</strong><br>
+                                                <span class="text-muted">大学名・学部・学科</span><br>
+                                                <small class="text-muted">University Name, Faculty, Department</small>
                                             </li>
                                         </ul>
                                     </div>
