--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container text-center pt-5">
                 <div class="row pt-5">
                     <div class="col">
-                        <h1><canvas id="res-title"></canvas></h1>
+                        <h1><canvas id="res-title" class="col-12"></canvas></h1>
                     </div>
                 </div>
             </div>            
