--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <h5 class="text-success">職歴 <small class="text-muted">Work Experience</small></h5>
-                                        <ul class="list-unstyled">
+                                        <ul class="list-unstyled" id="ul-career">
                                             <li class="mb-2">
                                                 <strong>2024年 - 現在</strong><br>
                                                 <span class="text-muted">会社名・職位</span><br>
@@ -62,7 +62,7 @@
                                     </div>
                                     <div class="col-md-6">
                                         <h5 class="text-success">学歴 <small class="text-muted">Education</small></h5>
-                                        <ul class="list-unstyled">
+                                        <ul class="list-unstyled" id="ul-education">
                                             <li class="mb-2">
                                                 <strong>2020年 - 2024年</strong><br>
                                                 <span class="text-muted">大学名・学部・学科</span><br>
