--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
                         <!-- 免許と資格 Section -->
                         <div class="card shadow-sm">
                             <div class="card-header bg-secondary text-white">
-                                <h2 class="card-title mb-1">免許と資格</h2>
-                                <small class="text-light opacity-75">Licenses & Certifications</small>
+                                <h2 class="card-title mb-1">受賞歴と資格</h2>
+                                <small class="text-light opacity-75">Awards & Certifications</small>
                             </div>
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <div class="border-start border-info border-3 ps-3">
-                                            <h6 class="text-info mb-1">免許 <small class="text-muted">Licenses</small></h6>
+                                            <h6 class="text-info mb-1">受賞歴 <small class="text-muted">Awards</small></h6>
                                             <ul class="list-unstyled mb-0">
                                                 <li class="mb-1">
                                                     <i class="bi bi-check-circle-fill text-success me-2"></i>
