--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
                         <!-- 免許と資格 Section -->
                         <div class="card shadow-sm">
                             <div class="card-header bg-secondary text-white">
-                                <h2 class="card-title mb-1">受賞歴と資格</h2>
-                                <small class="text-light opacity-75">Awards & Certifications</small>
+                                <h2 class="card-title mb-1">受賞歴、資格と出版物</h2>
+                                <small class="text-light opacity-75">Awards & Certifications and Publications</small>
                             </div>
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-md-6 mb-3">
-                                        <div class="border-start border-info border-3 ps-3">
-                                            <h6 class="text-info mb-1">受賞歴 <small class="text-muted">Awards</small></h6>
+                                    <div class="col-md mb-3">
+                                        <div class="border-start border-gray border-3 ps-3">
+                                            <h6 class="text-gray mb-1">受賞歴 <small class="text-muted">Awards</small></h6>
                                             <ul class="list-unstyled mb-0">
                                                 <li class="mb-1">
                                                     <i class="bi bi-check-circle-fill text-success me-2"></i>
@@ -93,14 +93,30 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="col-md-6 mb-3">
-                                        <div class="border-start border-info border-3 ps-3">
-                                            <h6 class="text-info mb-1">資格 <small class="text-muted">Certifications</small></h6>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md mb-3">
+                                        <div class="border-start border-secondary border-3 ps-3">
+                                            <h6 class="text-secondary mb-1">資格 <small class="text-muted">Certifications</small></h6>
                                             <ul class="list-unstyled mb-0">
                                                 <li class="mb-1">
                                                     <i class="bi bi-award-fill text-warning me-2"></i>
                                                     TOEIC 850点
                                                     <br><small class="text-muted ms-4">TOEIC Score 850</small>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md mb-3">
+                                        <div class="border-start border-black border-3 ps-3">
+                                            <h6 class="text-black mb-1">出版物 <small class="text-muted">Publications</small></h6>
+                                            <ul class="list-unstyled mb-0">
+                                                <li class="mb-1">
+                                                    <i class="bi bi-award-fill text-warning me-2"></i>
+                                                    サイエンス誌
+                                                    <br><small class="text-muted ms-4">Science Magazine</small>
                                                 </li>
                                             </ul>
                                         </div>
