--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md mb-3">
-                                        <div class="border-start border-gray border-3 ps-3">
-                                            <h6 class="text-gray mb-1">受賞歴 <small class="text-muted">Awards</small></h6>
+                                        <div class="ps-3" id="awar">
+                                            <h6 class="text-secondary mb-1">受賞歴 <small class="text-muted">Awards</small></h6>
                                             <ul class="list-unstyled mb-0">
                                                 <li class="mb-1">
                                                     <i class="bi bi-check-circle-fill text-success me-2"></i>
@@ -96,7 +96,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md mb-3">
-                                        <div class="border-start border-secondary border-3 ps-3">
+                                        <div class="ps-3" id="cert">
                                             <h6 class="text-secondary mb-1">資格 <small class="text-muted">Certifications</small></h6>
                                             <ul class="list-unstyled mb-0">
                                                 <li class="mb-1">
@@ -110,8 +110,8 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md mb-3">
-                                        <div class="border-start border-black border-3 ps-3">
-                                            <h6 class="text-black mb-1">出版物 <small class="text-muted">Publications</small></h6>
+                                        <div class="ps-3" id="publ">
+                                            <h6 class="text-secondary mb-1">出版物 <small class="text-muted">Publications</small></h6>
                                             <ul class="list-unstyled mb-0">
                                                 <li class="mb-1">
                                                     <i class="bi bi-award-fill text-warning me-2"></i>
