--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                         <!-- 経歴・PR Section -->
                         <div class="card shadow-sm">
                             <div class="card-header bg-secondary text-white">
-                                <h2 class="card-title mb-1">経歴・PR</h2>
-                                <small class="opacity-75">Career History & Personal Statement</small>
+                                <h2 class="card-title mb-1">経歴・プロジェクト</h2>
+                                <small class="opacity-75">Special History & Project</small>
                             </div>
                             <div class="card-body">
                                 <div class="row">
